--- a/app/src/main/res/layout-land/activity_cq_mode.xml
+++ b/app/src/main/res/layout-land/activity_cq_mode.xml
@@ -27,7 +27,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
-                    android:text="Call Sign" />
+                    android:text="Call Sign"
+                    android:textSize="16sp" />
 
                 <EditText
                     android:id="@+id/input_callsign"
@@ -48,7 +49,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
-                    android:text="Freq" />
+                    android:text="Freq"
+                    android:textSize="16sp" />
 
                 <EditText
                     android:id="@+id/input_frequecy_s"
@@ -75,7 +77,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-                        android:text="Receive S Number" />
+                        android:text="Receive S"
+                        android:textSize="16sp" />
 
                     <Spinner
                         android:id="@+id/spinner_receive_s"
@@ -94,7 +97,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-                        android:text="Send S Number" />
+                        android:text="Send S"
+                        android:textSize="16sp" />
 
                     <Spinner
                         android:id="@+id/spinner_sender_s"
@@ -104,98 +108,95 @@
             </LinearLayout>
 
             <!-- Date Picker -->
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="Date" />
+                android:layout_marginBottom="16dp"
+                android:orientation="horizontal">
 
-            <DatePicker
-                android:background="@color/white"
-                android:id="@+id/cqdatePicker"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:calendarViewShown="false"
-                android:spinnersShown="true" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="Date"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/cqeditDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Select Date"
+                    android:focusable="false"
+                    android:clickable="true" />
+            </LinearLayout>
 
             <!-- Time Picker -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
-                android:text="Time" />
+                android:text="Time"
+                android:textSize="16sp" />
 
             <TimePicker
-                android:background="@color/white"
                 android:id="@+id/cqtimePicker"
+                android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:timePickerMode="spinner" />
         </LinearLayout>
     </ScrollView>
 
-    <!-- Right Section for Buttons -->
+    <!-- Right Section for RecyclerView and Buttons -->
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
+        <!-- RecyclerView -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="16dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_marginBottom="16dp" />
 
-        <!-- Buttons in Groups -->
-        <LinearLayout
+        <!-- Buttons -->
+        <Button
+            android:id="@+id/button_spot_myself"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:orientation="horizontal">
+            android:layout_marginBottom="8dp"
+            android:backgroundTint="@color/teal_200"
+            android:text="Spot Myself"
+            android:textColor="@color/white" />
 
-            <Button
-                android:id="@+id/button_spot_myself"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:backgroundTint="@color/teal_200"
-                android:text="Spot Myself" />
-
-            <Button
-                android:id="@+id/button_loadFreqFromRadio"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/teal_200"
-                android:text="Load Freq" />
-        </LinearLayout>
-
-        <LinearLayout
+        <Button
+            android:id="@+id/button_loadFreqFromRadio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginBottom="8dp"
+            android:backgroundTint="@color/teal_200"
+            android:text="Load Frequency"
+            android:textColor="@color/white" />
 
-            <Button
-                android:id="@+id/button_SaveLog"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:backgroundTint="@color/teal_200"
-                android:text="Save Log" />
+        <Button
+            android:id="@+id/cqsetNowButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:backgroundTint="@color/teal_200"
+            android:text="Set Now"
+            android:textColor="@color/white" />
 
-            <Button
-                android:id="@+id/set_currentTime_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/teal_200"
-                android:text="Set Time" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/button_SaveLog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/teal_200"
+            android:text="Save Log"
+            android:textColor="@color/white" />
     </LinearLayout>
 </LinearLayout>
