--- a/app/src/main/res/layout-land/activity_spot.xml
+++ b/app/src/main/res/layout-land/activity_spot.xml
@@ -66,7 +66,7 @@
             android:orientation="horizontal"
             android:layout_marginTop="8dp">
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="8dp"
                 android:text="Location"
@@ -74,7 +74,7 @@
 
             <TextView
                 android:id="@+id/locationItemView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:textSize="18sp" />
@@ -120,14 +120,29 @@
                     android:layout_weight="1" />
             </LinearLayout>
 
-            <DatePicker
-                android:background="@color/white"
-
-                android:id="@+id/SpotdatePicker"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:calendarViewShown="false"
-                android:spinnersShown="true" />
+                android:layout_marginBottom="8dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="Date"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/editDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Select Date"
+                    android:focusable="false"
+                    android:clickable="true" />
+            </LinearLayout>
+
 
             <TimePicker
                 android:background="@color/white"
@@ -146,7 +161,14 @@
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
-
+        <Button
+            android:id="@+id/setNowButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:backgroundTint="@color/teal_200"
+            android:text="Current Time"
+            android:textColor="@color/white" />
         <Button
             android:id="@+id/SendSpot"
             android:layout_width="match_parent"
