--- a/app/src/main/res/layout/activity_edit_log.xml
+++ b/app/src/main/res/layout/activity_edit_log.xml
@@ -62,68 +62,124 @@
             </LinearLayout>
 
             <!-- Location -->
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="8dp"
-                android:text="Location"
-                android:textSize="16sp" />
+                android:orientation="horizontal"
+                android:layout_marginBottom="8dp">
 
-            <EditText
-                android:id="@+id/LogeditLocation"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="Location"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/LogeditLocation"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Enter Location" />
+            </LinearLayout>
+
+            <!-- Date -->
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <!-- Date and Time Pickers -->
-            <DatePicker
-                android:id="@+id/LogdatePicker"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:calendarViewShown="false"
-                android:spinnersShown="true" />
+                android:orientation="horizontal"
+                android:layout_marginBottom="8dp">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="Date"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/LogeditDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Select Date"
+                    android:focusable="false"
+                    android:clickable="true" />
+            </LinearLayout>
+            <!-- S-Value Section -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="8dp">
+
+                <!-- Receive S-Value -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="8dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:text="Receive S-Value"
+                        android:textSize="16sp" />
+
+                    <Spinner
+                        android:id="@+id/LogreceiveSValueSpinner"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
+                <!-- Send S-Value -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:text="Send S-Value"
+                        android:textSize="16sp" />
+
+                    <Spinner
+                        android:id="@+id/LogsendSValueSpinner"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <!-- Time Picker -->
             <TimePicker
                 android:id="@+id/LogtimePicker"
+                android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
                 android:timePickerMode="spinner" />
 
-            <!-- Receive S-Value -->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="8dp"
-                android:text="Receive S-Value"
-                android:textSize="16sp" />
-
-            <Spinner
-                android:id="@+id/LogreceiveSValueSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <!-- Send S-Value -->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="8dp"
-                android:text="@string/send_s_value"
-                android:textSize="16sp" />
-
-            <Spinner
-                android:id="@+id/LogsendSValueSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
-
-    <!-- Fixed Button at the Bottom -->
+    <Button
+        android:id="@+id/LogsetNowButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/teal_200"
+        android:text="Set Now"
+        android:textColor="@color/white" />
+    <!-- Save Changes Button -->
     <Button
         android:id="@+id/LogsaveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:backgroundTint="@color/teal_200"
-        android:textColor="@color/white"
-        android:text="@string/save_changes" />
+        android:text="Save Changes"
+        android:textColor="@color/white" />
 </LinearLayout>
