--- a/app/src/main/res/layout/activity_spot.xml
+++ b/app/src/main/res/layout/activity_spot.xml
@@ -116,13 +116,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-            <DatePicker
-                android:id="@+id/SpotdatePicker"
-                android:background="@color/white"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:calendarViewShown="false"
-                android:spinnersShown="true" />
+                android:orientation="horizontal"
+                android:layout_marginBottom="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="Date"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/editDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Select Date"
+                    android:focusable="false"
+                    android:clickable="true" />
+            </LinearLayout>
 
             <TimePicker
                 android:id="@+id/SpottimePicker"
@@ -139,7 +154,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="8dp">
-
+        <Button
+            android:id="@+id/setNowButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:backgroundTint="@color/teal_200"
+            android:text="Current Time"
+            android:textColor="@color/white" />
         <Button
             android:id="@+id/SendSpot"
             android:layout_width="match_parent"
